# expense-tracker

./: .gitignore  README.md
expense-agent/: .agents-cli-spec.md  README.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml  test_adk.py  test_adk2.py  test_attacker.py  test_session_events.py  test_sessions.py  test_sessions2.py  test_sessions3.py  test_sessions4.py
expense-agent/app/: agent.py  fast_api_app.py
expense-agent/app/app_utils/: .requirements.txt  reasoning_engine_adapter.py  telemetry.py  typing.py
expense-agent/deployment/terraform/single-project/: variables.tf
submission_frontend/: main.py  pyproject.toml  test_pending.py  test_sessions.py
